fix wave spacing

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -21,22 +21,15 @@
 
 .wave{
   position: absolute;
-  bottom: -1px;
+  margin: 0;
+  padding: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   height: 50px;
   display: block;
-
-  line-height: 0;
-  transform: translateY(1px);
+  bottom: -1px;
 }
-
-@supports (-webkit-touch-callout: none) {
-  .wave {
-    transform: translateY(2px);
-  }
-}
-
 
 .wave path{
   fill: #eae2b7;
